--- a/ThienNga2/Views/ProductDetail/NewProduct.cshtml
+++ b/ThienNga2/Views/ProductDetail/NewProduct.cshtml
@@ -105,11 +105,11 @@
                     <label>Mã nhà máy @Html.TextBoxFor(Model => Model.producFactoryID)</label>
                     <label>Mã cửa hàng @Html.TextBoxFor(Model => Model.productStoreID)</label>
                     <label>Giá @Html.TextBoxFor(Model => Model.price)</label>
-                    <label>Số luọng giới hạn @Html.TextBoxFor(Model => Model.minThresHold)</label>
+                    <label>Báo khi số lượng thấp hơn @Html.TextBoxFor(Model => Model.minThresHold)</label>
 
                 </div>
                 <div class="button-section">
-                    <input id="gui" type="submit" name="Tạo" />
+                    <input id="gui" type="submit" value="XÁC NHẬN" />
 
                 </div>
             </form>
