--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -87,7 +87,7 @@
             
                     $('#items_' + (i - 1) + '__chietKhauTrucTiep').val("0");
                     $('#items_' + (i - 1) + '__chietKhauPhanTram').val("0");
-                    $('#items_' + (i - 1) + '__quantity').val("0");
+                    $('#items_' + (i - 1) + '__quantity').val("1");
                     $('#items_' + (i - 1) ).val("");
                     $('#lid' + (i - 1)).text("");
                     $('#pid' + (i - 1)).text("");
@@ -358,12 +358,12 @@
                     <label>EMAIL @Html.TextBoxFor(Model => Model.Email, new { @class = "form-control" })</label>
 
                     <label>Địa chỉ @Html.TextBoxFor(Model => Model.Adress, new { @class = "form-control" })</label>
-                    <label>Địa chỉ giao hàng @Html.TextBoxFor(Model => Model.Adress2, new { @class = "form-control" })</label>
+                    <label>Ghi chú thêm @Html.TextBoxFor(Model => Model.Adress2, new { @class = "form-control" })</label>
                 </div>
 
                 <div class="section"><span>2</span>Thông tin sản phẩm</div>
                 <table class="table table-striped table-bordered" cellspacing="0" width="100%">
-                    <label>Lấy từ kho @Html.DropDownListFor(Model => Model.inventoryID, ls2)</label>
+                    <label> @Html.DropDownListFor(Model => Model.inventoryID, ls2)</label>
                     @for (var i = 0; i < Model.items.Count; i++)
                     {
                         string idd = "divid" + i;
@@ -376,7 +376,7 @@
                                     <label>Tên/Mã nhà máy/SKU @Html.TextBoxFor(Model => Model.items[i].SKU, new { @class = "form-control" })</label>
                                 </td>
                                 <td>
-                                    <label>Mã/Mã sản phẩm chưa lưu @Html.TextBoxFor(Model => Model.items[i].newSKU, new { @class = "form-control" })</label>
+                                    <label>Mã tạm @Html.TextBoxFor(Model => Model.items[i].newSKU, new { @class = "form-control" })</label>
                                 </td>
                                 <td>
 
@@ -390,16 +390,19 @@
 
                                 <td>
                                  
-                                    <label>Số lượng @Html.TextBoxFor(Model => Model.items[i].quantity, new { @class = "form-control", value = "1" })</label>
+                                    <label>Số lượng @Html.TextBoxFor(Model => Model.items[i].quantity, new { @Value = "1", @class = "form-control"})</label>
                                 </td>
-                        
+                                <td>
+
+                                    <label>Qui cách @Html.TextBoxFor(Model => Model.items[i].quicach, new { @Value = "Cái", @class = "form-control" })</label>
+                                </td>
                                 <td>
                                 
-                                    <label>Chiết khấu % @Html.TextBoxFor(Model => Model.items[i].chietKhauPhanTram, new { @class = "form-control", value = "0" })</label>
+                                    <label>CK % @Html.TextBoxFor(Model => Model.items[i].chietKhauPhanTram, new { @class = "form-control", value = "0" })</label>
                                 </td>
                                 <td>
                               
-                                    <label>Chiết khấu trực tiếp @Html.TextBoxFor(Model => Model.items[i].chietKhauTrucTiep, new { @class = "form-control", value = "0" })</label>
+                                    <label>CK tiền mặt @Html.TextBoxFor(Model => Model.items[i].chietKhauTrucTiep, new { @class = "form-control", value = "0" })</label>
                                 </td>
                                 <td>
 
@@ -421,7 +424,7 @@
                         @*</div>*@
                     }
                     <tr id="trVAT" style="display:none">
-                        <td colspan="7" align="right">VAT</td>
+                        <td colspan="7" align="right">VAT 10%</td>
                         <td id="TotalVAT">  </td>
                     </tr>
                     <tr>
@@ -435,8 +438,8 @@
                     
                 </table>
                 <div class="button-section">
-                    VAT @Html.CheckBoxFor(m => m.VAT)
-                    <input type="submit" name="Hoàn tất" />
+                    Có VAT @Html.CheckBoxFor(m => m.VAT)
+                    <input type="submit" name="Hoàn tất" value="Hoàn tất" />
                    
                 </div>
             </form>
