--- a/ThienNga2/Views/BaoGia/BaoGiaList.cshtml
+++ b/ThienNga2/Views/BaoGia/BaoGiaList.cshtml
@@ -8,11 +8,7 @@
     <script src="//code.jquery.com/jquery-1.12.3.js"> </script>
     <script src="https://cdn.datatables.net/1.10.12/js/jquery.dataTables.min.js"> </script>
     <script src="https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js"> </script>
-    <script>
-        $(document).ready(function () {
-            $('#example').DataTable();
-        });
-    </script>
+
 
 
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" />
@@ -22,12 +18,20 @@
             background: url('') no-repeat center center fixed;
         }
     </style>
+    <script>
+        $(document).ready(function () {
+            $('#example').dataTable({
+                "aaSorting": [[0, "desc"]]
+            });
+        });
+    </script>
 </head>
 <body>
     <div>
-        <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
+        <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" data-sort-name="ID" data-sort-order="desc"> 
             <thead>
                 <tr>
+                    <th>ID</th>
                     <th>Ngày</th>
                     <th>Tên khách</th>
                     <th>SĐT</th>
@@ -40,6 +44,9 @@
                 {
                     String linkEdit = "/BaoGia/Search?code=" + wact.id;
                     <tr>
+                        <td>
+                            @wact.id
+                        </td>
                         <td>
                            @wact.date
                         </td>
