--- a/ThienNga2/Views/ProductItem/NewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/NewProductItem.cshtml
@@ -362,8 +362,12 @@
                 </div>
 
                 <div class="section"><span>2</span>Thông tin sản phẩm</div>
-                <table class="table table-striped table-bordered" cellspacing="0" width="100%">
-                    <label> @Html.DropDownListFor(Model => Model.inventoryID, ls2)</label>
+                <label> @Html.DropDownListFor(Model => Model.inventoryID, ls2)</label>
+                <table class="table table-striped table-bordered" cellspacing="0" width="100%" id="neworder">
+                    <tr hidden="hidden"> <td colspan="4"> Tên Khách </td><td id="cusNAMEE" colspan="3"> </td></tr>
+                    <tr hidden="hidden"> <td colspan="4">SĐT</td><td  id="cusSDT" colspan="3">  </td></tr>
+                    <tr hidden="hidden"> <td colspan="4">Địa chỉ</td><td id="cusDC" colspan="3"> </td></tr>
+                    <tr hidden="hidden"> <td colspan="4">Ghi chú thêm </td><td id="cuGHICHU" colspan="3"></td></tr>
                     @for (var i = 0; i < Model.items.Count; i++)
                     {
                         string idd = "divid" + i;
@@ -372,39 +376,40 @@
                         string thanhtienID = "thanhtien" + idd;
                         @*<div class="inner-wrap" id="@idd">*@
                             <tr id="@idd">
-                                <td >
+                                <td id="@("skuu"+i)">
                                     <label>Tên/Mã nhà máy/SKU @Html.TextBoxFor(Model => Model.items[i].SKU, new { @class = "form-control" })</label>
                                 </td>
-                                <td>
+                                <td id="@("matamm"+i)">
                                     <label>Mã tạm @Html.TextBoxFor(Model => Model.items[i].newSKU, new { @class = "form-control" })</label>
                                 </td>
-                                <td>
+                                <td id="@("namee"+i)">
 
                                     <label>Tên Sản phẩm  <label id="@idl"></label> </label>
                                 </td>
-                                <td>
+                                <td id="@("dongiaa"+i)">
                                     @Html.HiddenFor(Model => Model.items[i].DonGiaS, new { @class = "form-control", value = "0" })
                                     <label>Đợn giá <label id="@idp"></label> </label>
-                                    @Html.TextBoxFor(Model => Model.items[i].DonGiaS2, new { @class = "form-control",  style = "display: none;" })
+                                    @Html.TextBoxFor(Model => Model.items[i].DonGiaS2, new { @class = "form-control", style = "display: none;" })
                                 </td>
 
-                                <td>
-                                 
-                                    <label>Số lượng @Html.TextBoxFor(Model => Model.items[i].quantity, new { @Value = "1", @class = "form-control"})</label>
+
+                                <td id="@("soluongg"+i)">
+
+                                    <label>Số lượng @Html.TextBoxFor(Model => Model.items[i].quantity, new { @Value = "1", @class = "form-control" })</label>
                                 </td>
-                                <td>
+                                <td id="@("quicachh"+i)">
 
                                     <label>Qui cách @Html.TextBoxFor(Model => Model.items[i].quicach, new { @Value = "Cái", @class = "form-control" })</label>
                                 </td>
-                                <td>
-                                
+                                <td id="@("ckptt"+i)">
+
                                     <label>CK % @Html.TextBoxFor(Model => Model.items[i].chietKhauPhanTram, new { @class = "form-control", value = "0" })</label>
                                 </td>
-                                <td>
-                              
+                                <td id="@("cktmm"+i)">
+
                                     <label>CK tiền mặt @Html.TextBoxFor(Model => Model.items[i].chietKhauTrucTiep, new { @class = "form-control", value = "0" })</label>
                                 </td>
-                                <td>
+                                <td id="@("thanhtienn"+i)">
 
                                     <label>Thành tiền @Html.TextBoxFor(Model => Model.items[i].thanhTienS, new { @class = "form-control", value = "0" })</label>
                                 </td>
@@ -437,6 +442,8 @@
                     </tr>
                     
                 </table>
+
+   
                 <div class="button-section">
                     Có VAT @Html.CheckBoxFor(m => m.VAT)
                     <input type="submit" name="Hoàn tất" value="Hoàn tất" />
@@ -447,7 +454,16 @@
        
 
     }
-
+    <br />
+    <br />
+    <div class="inner-wrap">
+        @using (Html.BeginForm("Confirm", "ProductItem/BaoGia", FormMethod.Post, new { id = "baogiaform" }))
+        {
+            <input type="hidden" id="dataString" name="dataString" value="" />
+            <input type="hidden" id="datavat" name="covat" value="" />
+            <button type="button" name="Edit" value="Hoàn tất" onclick="inbill()">Xuất báo giá</button>
+        }
+    </div>
 
     <script>
         $(document).ready(function () {
@@ -481,6 +497,81 @@
 
         })
         
+    </script>
+    <script>
+        function inbill() {
+            if ($("#VAT").is(':checked')) {
+                $("#datavat").val("true");
+            }
+            else {
+                $("#datavat").val("false");
+            }
+            $("#cusNAMEE").text($("#cusName").val());
+
+            $("#cusSDT").text($("#phoneNumber").val());
+            $("#cusDC").text($("#Adress").val());
+            $("#cuGHICHU").text($("#Adress2").val());
+            var all = "";
+            all = all + "a :split" + $("#cusNAMEE").text() + ":eachrow";
+            all = all + "a :split" + $("#cusSDT").text() + ":eachrow";
+            all = all + "a :split" + $("#cusDC").text() + ":eachrow";
+            all = all + "a :split" + $("#cuGHICHU").text() + ":eachrow";
+            
+            //gets table
+            var oTable = document.getElementById('neworder');
+
+            //gets rows of table
+            var rowLength = oTable.rows.length;
+       
+            //loops through rows
+            for (i = 0; i < 20; i++) {
+                if ($("#items_" + i + "__SKU").val().trim() != "" || $("#items_" + i + "__newSKU").val().trim()) {
+                    var temp = "";
+                    if ($("#items_" + i + "__SKU").val().trim() != "")
+                        temp = temp + $("#items_" + i + "__SKU").val().trim() + ":split";
+                    else {
+                        temp = temp + "-" + ":split";
+                    }
+                    if ($("#items_" + i + "__newSKU").val().trim() != "") {
+                        temp = temp + $("#items_" + i + "__newSKU").val().trim() + ":split";
+                    }
+                    else {
+                        temp = temp + "-"+ ":split";
+                    }
+                    if ($("#lid" + i).text().trim() != "") {
+                        temp = temp + $("#lid" + i).text().trim() + ":split";
+                    }
+                    else {
+                        temp = temp + "-"+ ":split";
+                    }
+                   
+                    if ($("#items_"+i+"__DonGiaS2").val() != "") {
+                        temp = temp + $("#items_"+i+"__DonGiaS2").val().trim() + ":split";
+                    }
+                    else {
+                        temp = temp + $("#pid" + i).text().trim() + ":split";
+                    }
+
+                    temp = temp + $("#items_" + i + "__quantity").val().trim() + ":split";
+                    temp = temp + $("#items_" + i + "__quicach").val().trim() + ":split";
+                    temp = temp + $("#items_" + i + "__chietKhauPhanTram").val().trim() + ":split";
+                    temp = temp + $("#items_" + i + "__chietKhauTrucTiep").val().trim() + ":split";
+                    temp = temp + $("#items_" + i + "__thanhTienS").val().trim() + ":split";
+
+                    if ($("#items_" + i + "__warrantyAvailable").is(':checked')) {
+                        temp = temp + "Có";
+                    }
+                    else {
+                        temp = temp + "Ko";
+                    }
+                    all = all + ":eachrow" + temp.trim();
+                }
+            }
+            $("#dataString").val(all);
+            alert($("#dataString").val());
+            $("#baogiaform").submit();
+        }
+ 
     </script>
 
 </body>
